renamed main.py to applications.py for deployment with AWS

--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,10 @@ threadsafe: true
 libraries:
 - name: ssl
   version: latest
+- name: numpy
+  version: latest
+- name: pandas
+  version: latest
 
 handlers:
 - url: /static
